fix header spacing

--- a/css/olinuris/_header.scss
+++ b/css/olinuris/_header.scss
@@ -108,10 +108,8 @@
 
 // Small devices (tablets, 768px and up)
 @media (min-width: $screen-sm) { 
-	.hero {
-		header {
-			padding: 2em 0 0 0;
-		}
+	header {
+		padding: 2em 0 0 0;
 	}
 }
 
