--- a/css/style.css
+++ b/css/style.css
@@ -7577,7 +7577,7 @@ h5 {
   margin-bottom: .25em; }
 
 @media (min-width: 768px) {
-  .hero header {
+  header {
     padding: 2em 0 0 0; } }
 .hero {
   background: url("../img/Olin1865.jpg") no-repeat 50% 50%;
